# kframework-pretty-printer

./: .gitignore  LICENSE  README.md  pkrun-pretty-printer.cabal  stack.yaml
Linux/System/: RunCommand.hs
Windows/System/: RunCommand.hs
kompile-app/: Main.hs
krun-app/: Main.hs
src/: HTMLGen.hs  Kfileparser.hs  Lib.hs  TagContentParser.hs  XMLFixer.hs
src/Data/: Color.hs
test/: Spec.hs
