name:                pkrun-pretty-printer
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/wildProgrammer/kframework-pretty-printer#readme
license:             MIT
license-file:        LICENSE
author:              wildProgrammer
maintainer:          ianknote@gmail.com
copyright:           2017 Cebotari "wildProgrammer" Radu
category:            Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  if os(windows)
    hs-source-dirs:    Windows
  else
    hs-source-dirs:    Linux
  exposed-modules:     Lib
                     , Kfileparser
                     , Data.Color
                     , TagContentParser
                     , XMLFixer
                     , HTMLGen
                     , System.RunCommand
  build-depends:       base >= 4.7 && < 5
                     , process
                     , xml
                     , rainbow
                     , regex
                     , text
                     , containers
                     , filepath
                     , directory
                     , parsec
  default-language:    Haskell2010

executable pkrun
  hs-source-dirs:      krun-app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , process
                     , pkrun-pretty-printer
                     , xml
                     , rainbow
  default-language:    Haskell2010

executable pkompile
  hs-source-dirs:      kompile-app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , process
                     , pkrun-pretty-printer
                     , xml
                     , rainbow
                     , regex
                     , bytestring
                     , text
  default-language:    Haskell2010

test-suite krun-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , process
                     , xml
                     , rainbow
                     , text
                     , regex
                     , containers
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wildProgrammer/kframework-pretty-printer
